--- a/Network/네트워크 물리적 구조.md
+++ b/Network/네트워크 물리적 구조.md
@@ -1,7 +1,5 @@
 # 네트워크 물리적 구조
 
----
-
 ## 연결 유형
 
 링크를 통해 두 장치를 연결한것을 **네트워크**라고 함
@@ -27,7 +25,7 @@ ex) 텔레비전 - 리모컨
 
 ### 그물형 접속형태 - Mesh Topology
 
-<img width = "30%" align = "left" src = "https://networksmania.files.wordpress.com/2012/03/mesh-topology1.jpg?w=640"/>
+<img width = "30%" src = "https://networksmania.files.wordpress.com/2012/03/mesh-topology1.jpg?w=640"/>
 
 - 각 장치가 n(n-1) 개의 점대점 링크로 연결
 - 전이중 링크를 사용할 경우 n(n-1)/2 개의 링크로 연결됨
@@ -36,14 +34,14 @@ ex) 텔레비전 - 리모컨
 
 ### 성형 접속형태 - Star Topology
 
-<img width = "40%" align = "left" src = "https://miro.medium.com/v2/resize:fit:1400/1*emG5fFYSg-79XazCSz7TsA.jpeg"/>
+<img width = "40%" src = "https://miro.medium.com/v2/resize:fit:1400/1*emG5fFYSg-79XazCSz7TsA.jpeg"/>
 
 - 각 장치는 중앙의 제어장치인 허브를 통해서 연결됨
 - 각 장치는 직접 데이터를 전송할 수 없으며 반드시 허브를 거쳐야 함
 
 ### 버스형 접속형태 - Bus Topology
 
-<img width = "40%" align = "left" src = "https://cdn.comparitech.com/wp-content/uploads/2018/11/Bus-Topology.jpg"/>
+<img width = "40%" src = "https://cdn.comparitech.com/wp-content/uploads/2018/11/Bus-Topology.jpg"/>
 
 - 각 장치는 하나의 긴 케이블을 통해 연결됨
   - 긴 케이블이 **백본** 역할을 함
@@ -55,7 +53,7 @@ ex) 텔레비전 - 리모컨
 
 ### 링형 접속형태 - Ring Topology
 
-<img width = "40%" align = "left" src = "https://www.elprocus.com/wp-content/uploads/Ring-Topology.jpg" />
+<img width = "40%" src = "https://www.elprocus.com/wp-content/uploads/Ring-Topology.jpg" />
 
 - 각 장치는 바로 오른쪽 장치와 점대점 링크로 연결됨
   - 각 장치는 하나의 **리피터**를 포함하고 있음
